# pith

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FEATURES.md  README.md  app.py  build_pkg.py  entrypoint.sh  mkdocs.yml  pith.spec  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  standalone.yml
_golden/documentation/: tree.yaml
_golden/documentation/markdowns/: editing.md  frontmatter.md  getting-started.md  hierarchy.md  import-export.md  introduction.md  keyboard-shortcuts.md  link-validation.md  projects.md  scan-test.md  search.md  unlinked-files.md
_golden/new-project/: tree.yaml
_golden/new-project/markdowns/: new-project-guide.md
_pages/: README.md  index.md
_pages/stylesheets/: extra.css
backend/: config.py  converters.py  issues.py  launcher.py  main.py  models.py  names.py  report.py  requirements.txt  scan.py  stats.py  structure.py  utils.py
backend/routes/: analysis.py  collection.py  config.py  export.py  files.py  projects.py  quick_open.py
clods/: architecture.md  commands.md  features.md  key-files.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  spellcheck.ts  spellcheck.worker.ts  treeHelpers.ts  types.ts
frontend/src/components/: AddFileDialog.tsx  AddRootDialog.tsx  CodeEditor.tsx  ComplianceReport.tsx  ExportModal.tsx  FileTemplateComplianceReport.tsx  FrontmatterPanel.tsx  ImageBrowser.tsx  ImportModal.tsx  LinkReport.tsx  (+15 more)
projects/documentation/: tree.yaml
projects/fdas/: project.md  tree.yaml
(+28 files in other folders)
